pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-181-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/181-html_blocks.md
---
[32m<!DOCTYPE html>
[0m
