pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-182-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/182-html_blocks.md
---
[32m<![CDATA[
[0m[32mfunction matchwo(a,b)
[0m[32m{
[0m[32m  if (a < b && a < 0) then {
[0m[32m    return 1;
[0m[32m
[0m[32m  } else {
[0m[32m
[0m[32m    return 0;
[0m[32m  }
[0m[32m}
[0m[32m]]>
[0m
okay
